[gd_scene load_steps=3 format=3 uid="uid://bwrn3rwka2ssa"]

[ext_resource type="Script" path="res://src/Palette/PaletteSwatch.gd" id="1"]
[ext_resource type="PackedScene" uid="uid://3pmb60gpst7b" path="res://src/UI/Nodes/TransparentChecker.tscn" id="2_hujmr"]

[node name="PaletteSwatch" type="ColorRect"]
custom_minimum_size = Vector2(8, 8)
anchors_preset = -1
anchor_left = 2.60711e-05
anchor_top = -2.75612e-05
anchor_right = 2.60711e-05
anchor_bottom = -2.75612e-05
offset_left = -0.033371
offset_top = 0.0198441
offset_right = 25.9666
offset_bottom = 26.0198
mouse_filter = 1
mouse_default_cursor_shape = 2
color = Color(0, 0, 0, 0)
script = ExtResource("1")

[node name="TransparentChecker" parent="." instance=ExtResource("2_hujmr")]
show_behind_parent = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[connection signal="gui_input" from="." to="." method="_on_PaletteSlot_gui_input"]
